@@ -1,8 +1,9 @@
 package group5.sebm.service;
 
+import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import group5.sebm.controller.dto.UserDto;
 import group5.sebm.controller.vo.UserVo;
-import group5.sebm.dao.UserRepository;
+import group5.sebm.dao.UserMapper;
 import group5.sebm.service.bo.Client;
 import group5.sebm.entity.UserPo;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -18,12 +19,12 @@ import java.util.stream.Collectors;
 @Transactional
 public class UserService {
 
-  private final UserRepository userRepository;
+  private final UserMapper userMapper;
   private final BCryptPasswordEncoder passwordEncoder = new BCryptPasswordEncoder();
 
   @Autowired
-  public UserService(UserRepository userRepository) {
-    this.userRepository = userRepository;
+  public UserService(UserMapper userMapper) {
+    this.userMapper = userMapper;
   }
 
   private Client poToBo(UserPo po) {
@@ -40,17 +41,17 @@ public class UserService {
 
 //  public void createUser(UserVo vo, String password) {
 //    UserPo po = new UserPo(vo.getId(), vo.getUsername(), password, vo.getAge());
-//    userRepository.save(po);
+//    userMapper.save(po);
 //  }
   public void UserRegister(UserDto userDto) {
     Client bo = new Client(null, userDto.getUsername(), userDto.getPassword(), userDto.getAge());
     UserPo po = new UserPo(bo.getId(), bo.getUsername(), passwordEncoder.encode(bo.getPassword()), bo.getAge());
-    userRepository.save(po);
+    userMapper.insert(po);
   }
 
   public void login(UserDto dto, HttpSession session) {
-    UserPo po = userRepository.findByid(dto.getId())
-            .orElseThrow(() -> new IllegalArgumentException("用户不存在"));
+    UserPo po = userMapper.selectById(dto.getId());
+    if (po == null) throw new IllegalArgumentException("用户不存在");
 
     if (!passwordEncoder.matches(dto.getPassword(), po.getPassword())) {
       throw new IllegalArgumentException("密码错误");
@@ -59,45 +60,58 @@ public class UserService {
   }
 
   public void logout(UserDto dto, HttpSession session) {
-    UserPo po = userRepository.findByid(dto.getId())
-            .orElseThrow(() -> new IllegalArgumentException("用户不存在"));
+    UserPo po = userMapper.selectById(dto.getId());
+    if (po == null) throw new IllegalArgumentException("用户不存在");
 
     session.invalidate();
   }
 
   public void deleteUser(int id) {
-    if (userRepository.existsById(id)) {
-      userRepository.deleteById(id);
+    if (userMapper.selectById(id)) {
+      userMapper.deleteById(id);
     }
   }
 
   public void updateUser(UserVo vo, String password) {
-    if (userRepository.existsById(vo.getId())) {
-      UserPo po = userRepository.findById(vo.getId()).orElseThrow();
+    if (userMapper.selectById(vo.getId())) {
+      UserPo po = userMapper.selectById(vo.getId()).orElseThrow();
       po.setUsername(vo.getUsername());
       if (password != null && !password.isEmpty()) {
         po.setPassword(password);
       }
       po.setAge(vo.getAge());
-      userRepository.save(po);
+      userMapper.save(po);
     }
   }
 
 
-  public List<UserVo> getAllUsers() {
-    return userRepository.findAll()
-        .stream()
-        .map(this::poToVo)
-        .collect(Collectors.toList());
+
+  public List<UserVo> getAllDiscountUsers() {
+    List<UserPo> allUsers = userMapper.selectList(new QueryWrapper<>());
+    return allUsers.stream()
+            .map(this::poToBo)
+            .filter(Client::isokforDiscount)
+            .map(this::boToVo)
+            .toList();
   }
 
-  public UserVo getDiscountUserById(Integer id) {
-    return userRepository.findById(id)
-        .map(po -> {
-          Client bo = poToBo(po);
-          return bo.isokforDiscount() ? boToVo(bo) : null;
-        })
-        .orElse(null);
+  public UserVo getDiscountUserById(int id) {
+    UserPo po = userMapper.selectById(id).orElse(null);
+    if (po == null) return null;
+    Client bo = poToBo(po);
+    if (bo.isokforDiscount()) {
+      return boToVo(bo);
+    } else {
+      return null;
+    }
+  }
+
+  public List<UserVo> getAllUsers()
+  {
+    List<UserPo> allUsers = userMapper.selectList(new QueryWrapper<>());
+    return allUsers.stream()
+            .map(this::poToVo)
+            .collect(Collectors.toList());
   }
 }
 
